# SVSimulator

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __main__.py
src/app/sv/: __init__.py  form_dialog.py  model.py  presenter.py  view.py
src/app/sv/form/: __init__.py  presenter.py  view.py
src/app/ui/: main_window.py
src/services/: __init__.py  fuzz.py
src/ui/: main_window.py
src/utils/: threaded.py
