[project]
name = "SVSimulator"
version = "0.1.0"
authors = [
    {name = "Matheus", email = "mlima1324@gmail.com"},
]
description = "Implementation of Sampled Values IEC61850 packet fuzzer"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "PyQt6",
  "pysv@git+https://github.com/arthurazs/pysv.git"
]

[project.optional-dependencies]
dev = [
  "ruff==0.4.8",
  "mypy==1.10.0",
  "pytest>=8.2.2",
]

[project.urls]
"Homepage" = "https://github.com/romanelimatheus/SVSimulator"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "FA102", "FIX002"]
extend-ignore = ["D"]  # temporary

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["S101"]

[tool.mypy]
exclude = ["build", "venv"]
strict = true

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]